<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.meridal.examples</groupId>
  <artifactId>examples-parent</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>parent</name>
  
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.1.4.RELEASE</version>
    <relativePath/>
  </parent>
  
  <properties>
    <java.version>11</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <springfox.version>2.9.2</springfox.version>
  </properties>
  
  <build>
  
    <pluginManagement>
    
      <plugins>
              
        <!-- Ensure that all projects use the latest LTS JDK. -->

        <plugin> 
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <release>${java.version}</release>
          </configuration>            
        </plugin>
        
        <!-- Disable deployment, as this is a demo project. -->
        
        <plugin>      
          <artifactId>maven-deploy-plugin</artifactId>         
          <configuration>
            <skip>true</skip>
          </configuration>           
        </plugin>
        
        <!-- Use the latest version of the release plugin. -->
        
        <plugin>
          <artifactId>maven-release-plugin</artifactId>
          <version>2.5.3</version>
        </plugin>
    
      </plugins>
          
    </pluginManagement>

  </build>

  <dependencyManagement>
  
    <dependencies>
          
      <dependency>
        <groupId>com.github.derjust</groupId>
        <artifactId>spring-data-dynamodb</artifactId>
        <version>5.1.0</version>
      </dependency>

      <dependency>
        <groupId>com.github.vanroy</groupId>
        <artifactId>spring-boot-starter-data-jest</artifactId>
        <version>3.2.1.RELEASE</version>
      </dependency>

      <dependency>
        <groupId>com.sun.jna</groupId>
        <artifactId>jna</artifactId>
        <version>3.0.9</version>
        <scope>runtime</scope>
      </dependency>

      <dependency>
        <groupId>javax.annotation</groupId>
        <artifactId>javax.annotation-api</artifactId>
        <version>1.3.2</version>
      </dependency> 

      <dependency>
        <groupId>commons-lang</groupId>
        <artifactId>commons-lang</artifactId>
        <version>2.6</version>
      </dependency>

     <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.9</version>
      </dependency>
      
      <dependency>
        <groupId>io.springfox</groupId>
        <artifactId>springfox-swagger2</artifactId>
        <version>${springfox.version}</version>
      </dependency>
    
      <dependency>
        <groupId>io.springfox</groupId>
        <artifactId>springfox-swagger-ui</artifactId>
        <version>${springfox.version}</version>
      </dependency>

      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.1</version>
        <type>jar</type>
        <scope>test</scope>
      </dependency>
                  
    </dependencies>    
  
  </dependencyManagement>
  
  <!--
    Modules needing review:

    <module>scala</module>
    <module>scala-webapp</module>
        
  -->
  <modules>
    <module>example-domain</module>
    <module>jasmine</module>
    <module>qunit</module>
    <module>scala-test</module>
    <module>spring-boot-docker</module>
    <module>spring-boot-dynamodb</module>
    <module>spring-boot-elasticsearch</module>
    <module>spring-boot-elasticsearch-jest</module>
    <module>spring-boot-freemarker</module>
    <module>spring-boot-https</module>
    <module>spring-boot-kafka</module>
    <module>spring-boot-mongodb</module>
    <module>spring-boot-mysql</module>
    <module>spring-webapp-freemarker</module>
    <module>testNG</module>
    <module>functional-java</module>
  </modules>
  
</project>